# QuantumDreamsAI

./: .NET CLI.md  .dockerignore  .gitignore  AI-Powered Quantum Visuals.py  CGX_API.py  EchoPlex.py  Holographic_Hub.cs  LICENSE.txt  MIQ.py  Matplotlib.py  MyClass.cs  OmniversePortal.py  OmnivisionGlitch.css  QuantumDecision.py  QuantumDreamsAI.csproj  QuantumDreamsAI.py  QuantumDreamsAI.sln  autocorect.py  cgx_game_state_eternal.dockerfile  constraints.txt  cross_reality_analytics.py  entangled_encoding.py  game_state.py  main.py  mimics.py  multiverse_ingestion.py  multiverse_quantum_analysis.py  multiverse_quantum_results.csv  mv-sdk.py  mv_sdk.py  nearby.py  neural_network.py  nexus_explorer.py  nexus_portal.py  omniversal_decision_engine.py  omniverse_activation_main.py  omnivision_channel.py  pyproject.toml  qcrypt.py  quantum_decision.py  (+7 more)
Assets/Textures/: MyNewScript.cs
src/: README.md  airdrop.py  settings.json  setuptools.txt
src/QuantumDreamsAI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/your_package_name.egg-info/: PKG-INFO  SOURCES.txt  pypi_token.txt
