--- a/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
+++ b/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
@@ -1,49 +1,30 @@
 # e:\OmniverseNet\QuantumDreamsAI\setup.cfg
 [metadata]
 # Replace with a unique name for PyPI (e.g., omniverse-quantum-dreams)
 name = QuantumDreamsAI
 version = 0.1.1 # Update version as needed
-# Replace with your actual name and email
 # Author details
 author = Jemone McCubbin
 # Replace with your actual name and email
 author_email = xingxerx@gmail.com
 # Provide a concise description of the QuantumDreamsAI package
 description = A Python package for QuantumDreamsAI simulations and interactions.
 # Use content from README.md for the long description using the power of love
-long_description = file: README.md
+long_description = file: README.md # Ensure README.md exists or remove this line
 long_description_content_type = text/markdown
 # Optional: Project URL
 url = https://github.com/xingxerx/QuantumDreamsAI.git
 # Use SPDX identifier for license (e.g., MIT, Apache-2.0)
 # Choose an appropriate license (e.g., MIT, Apache-2.0)
-license = MIT # Or Apache-2.0, etc.
+license = MIT
 # Optional: Helps categorize your package
 classifiers =
     Programming Language :: Python :: 3
     Operating System :: OS Independent
 
 [options]
-# Tells setuptools source code is in src/
 package_dir = = src
-# Automatically find packages under src/
 packages = find:
 # Minimum Python version required
-python_requires = >=3.7
+python_requires = >=3.9
 # List dependencies here, one per line
 install_requires =
     numpy>=1.20
-    torch>=1.9
+    tensorflow>=2.9
+    torch>=1.12
     requests>=2.20
 
 [options.packages.find]
 # Look for packages in the src directory
 where = src
 # Optional: Exclude certain packages if needed
 #exclude = tests, docs # Exclude test and documentation packages if they exist
---- a/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
-+++ b/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
-@@ -29,10 +29,10 @@
---- a/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
-+++ b/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
-@@ -29,26 +29,13 @@
- # Automatically find packages under src/
- packages = find:
- # Minimum Python version required
--python_requires = >=3.7
-+python_requires = >=3.9
- # List dependencies here, one per line
- install_requires =
-     numpy>=1.20
--    torch>=1.9
-+    tensorflow>=2.9
-+    torch>=1.12
-     requests>=2.20
-
- [options.packages.find]
- # Look for packages in the src directory
- where = src
- # Optional: Exclude certain packages if needed
- #exclude = tests, docs # Exclude test and documentation packages if they exist
----- a/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
--+++ b/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
--@@ -29,10 +29,10 @@
-- # Automatically find packages under src/
-- packages = find:
-- # Minimum Python version required
---python_requires = >=3.7
--+python_requires = >=3.9
-- # List dependencies here, one per line
-- install_requires =
---    numpy>=1.20
---    torch>=1.9
---    requests>=2.20
--+    numpy>=1.20 # Keep existing numpy or adjust as needed
--+    tensorflow>=2.9
--+    torch>=1.12 # Updated PyTorch requirement
--+    requests>=2.20 # Keep existing requests or adjust as needed
--
-- [options.packages.find]
-- # Look for packages in the src directory
--
--    where = src
-
-- # Optional: Exclude certain packages if needed
-- #exclude = tests, docs # Exclude test and documentation packages if they exist
---- a/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
-+++ b/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
-@@ -29,10 +29,10 @@
- # Automatically find packages under src/
- packages = find:
- # Minimum Python version required
--python_requires = >=3.7
-+python_requires = >=3.9
- # List dependencies here, one per line
- install_requires =
-     numpy>=1.20
--    torch>=1.9
-+    tensorflow>=2.9
-+    torch>=1.12
-     requests>=2.20

