[metadata]
name = QuantumDreamsAI
version = 0.1.1
author = Jemone McCubbin
author_email = xingxerx@gmail.com
description = A Python package for QuantumDreamsAI simulations and interactions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xingxerx/QuantumDreamsAI.git
license = MIT
[options]
package_dir =
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.20
    tensorflow>=2.9
    torch>=1.12
    requests>=2.20
[options.packages.find]
where = src
