--- a/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
+++ b/e:/OmniverseNet/QuantumDreamsAI/setup.cfg
@@ -1,30 +1,25 @@
-# e:\OmniverseNet\QuantumDreamsAI\setup.cfg
 [metadata]
 name = QuantumDreamsAI
 version = 0.1.1
 author = Jemone McCubbin
 author_email = xingxerx@gmail.com
 description = A Python package for QuantumDreamsAI simulations and interactions.
-long_description = file: README.md
+long_description = file: README.md # Ensure README.md exists
 long_description_content_type = text/markdown
 url = https://github.com/xingxerx/QuantumDreamsAI.git
 license = MIT
+# Optional: Helps categorize your package
+classifiers =
+    Programming Language :: Python :: 3
+    Operating System :: OS Independent
 
 [options]
-package_dir =
 package_dir = = src
 packages = find:
 python_requires = >=3.9
 install_requires =
     numpy>=1.20
     tensorflow>=2.9
     torch>=1.12
     requests>=2.20
+
 [options.packages.find]
 where = src
---- /dev/null
-+++ b/E:/OmniverseNet/QuantumDreamsAI/README.md
-@@ -0,0 +1,3 @@
-+# QuantumDreamsAI
-+
-+A Python package for QuantumDreamsAI simulations and interactions.
-

